2000-03-21  lav

	* kern.cc: (ToLineEnd) set flag when spaces are truncated in test mode.

2000-03-16  lav

	* search.cc, screen.cc: move screen shifting because of status line
	  to TestPosition.
	* edit.cc: don't ask for save if read-only.
	* keymap.cc: leave more space for func name.

2000-02-28  lav

	* keymap.cc: break loop on EOF.

2000-02-18  lav

	* highli.cc, highli.h, search.cc: fix few memory alloc/free problems
	  with regex usage; handle errors from re_search_2.

2000-02-17  lav

	* edit.cc, edit.h, highli.cc, highli.h, keymapfn.cc, mainmenu.cc,
	  search.cc, search.h: don't include search.h in edit.h;
	  support ignore case option in highlightling patterns.

2000-02-12  lav

	* screen.cc: don't forget to set flag when ScreenTop changes.

2000-02-11  lav

	* user.cc: (UserMarkMove*) handle LineEnd in text mode properly.

2000-02-05  lav

	* loadsave.cc: cast MAP_FAILED (for osf/1)

2000-01-21  lav

	* edit.h: define bool even if LE_CURSES_BOOL is undefined.
	* getstr.cc, screen.cc: cast off const for addstr.
	* keymap.cc: include term.h.
	* keynames.cc: include edit.h to get curses.h

1999-12-25  lav

	* search.cc: set stdcol along with CurrentPos, this fixes random
	  cursor placement during search/replace when cursor has to be
	  placed at eol.

1999-12-02  lav

	* user.cc: use a larger buffer for offset.

1999-11-06  lav

	* about.cc, about.h: export copyright string.
	* edit.cc, edit.h: print copyright on --version.
	* mainmenu.cc, user.cc: include about.h.
	* search.cc: specify help for search and replace.
	* le.hlp: help for search and replace.

1999-11-05  lav

	* search.cc: (ReplaceFound) fixed replace to \\. (reported by
	  <sen@adm.yar.ru>); insert unknown backslashed characters verbatim.
	* keymapdf.cc: few more sequences.

1999-10-31  lav

	* user.cc: (UserYankBlock) set REDISPLAY_ALL.
	* help.cc: read help from file by section tag.
	* block.cc: use new help; add help for write-block/read-block.