@@ -105,13 +105,13 @@ Menu1 MainMenu[]={
    {" format &All             ",FUNC+HIDE,FormatAll,	 RW_noMM  },
    {NULL},
 {" O&thers ",SUBM},
-   {" &Calculator         ",FUNC+HIDE,editcalc		       },
-   {" &Draw tables        ",FUNC+HIDE,DrawFrames,     RW_noMM  },
-   {" &Format functions   ",FUNC+HIDE,FormatFunc,     RW_noMM  },
-   {" &Expand all tabs    ",FUNC+HIDE,ExpandAllTabs,  RW_noMM  },
-   {" &Optimize text      ",FUNC+HIDE,Optimize,	      RW_noMM  },
-   {" character &Set      ",FUNC+HIDE,UserChooseChar	       },
-   {" &Unix<->Dos         ",FUNC+HIDE,DOS_UNIX,       RW_noMM  },
+   {" &Calculator         ",FUNC+HIDE,editcalc			  },
+   {" &Draw tables        ",FUNC+HIDE,DrawFrames,	 RW_noMM  },
+   {" &Format functions   ",FUNC+HIDE,FormatFunc,	 RW_noMM  },
+   {" &Expand all tabs    ",FUNC+HIDE,ExpandAllTabs,	 RW_noMM  },
+   {" &Optimize text      ",FUNC+HIDE,UserOptimizeText,	 RW_noMM  },
+   {" character &Set      ",FUNC+HIDE,UserChooseChar		  },
+   {" &Unix<->Dos         ",FUNC+HIDE,DOS_UNIX,		 RW_noMM  },
    {NULL},
 {" &Options ",SUBM},
    {" &Editor                      ",FUNC,Options},
